# PVPHS-ROV

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
backend/: AGENTS.md  convert.py  main.py  pyproject.toml
blueos/: bootstrap-en.md  gstreamer-encoder-en.md
docs/: AI_DETECTION.md  AI_DETECTION_KO.md
docs/AI_YoloV8/: AI_DETECTION.md
docs/blueos/: bootstrap.md  fix-camera-issue.md
docs/floats/: Readme.md  implement.md  prompt.md
docs/raspberry/: Readme.md
float-station/: controller.py  datasource.py  hardware.py  main.py  pyproject.toml  ui.py
frontend/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/camera/: page.tsx
frontend/src/app/stats/: page.tsx
frontend/src/components/: nav.tsx
frontend/src/lib/: system.ts
