[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "ultralytics>=8.4.26",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
